# CIG-Caption-with-Intention-Generator-

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  README.md  check_llm.py  check_path.py  check_prompt.py  check_speaker.py  pyproject.toml
backend/audio/: analyzer.py  diarization.py
backend/llm/: emotion_tagger.py
backend/pipeline/: runner.py
backend/schemas/: word_schema.py
backend/stt/: assemblyai_transcriber.py  transcriber.py
backend/translation/: __init__.py  translator.py
frontend/: app.py
tests/test_audio/: test_analyzer.py  test_diarization.py
tests/test_llm/: test_emotion_tagger.py
tests/test_pipeline/: test_runner.py
tests/test_stt/: test_assemblyai_transcriber.py  test_transcriber.py
tests/test_translation/: test_translator.py
